--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="light_blue_500">#03A9F4</color>
     <color name="light_blue_700">#0288D1</color>
     <color name="grey_200">#eeeeee</color>
+    <color name="twitter_blue">#3B90C2</color>
 </resources>
