--- a/app/src/main/res/menu/login_menu.xml
+++ b/app/src/main/res/menu/login_menu.xml
@@ -2,6 +2,21 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Item" />
-    <item android:title="Item" />
+    <item
+        android:id="@+id/action_logo"
+        android:icon="@drawable/twitter_logo"
+        app:showAsAction="always"
+        android:title="logo"
+        />
+    <item
+        android:id="@+id/action_signup"
+        android:title="Sign up"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_about"
+        android:title="About"
+        app:showAsAction="never" />
+    <item
+        android:title="Proxy"
+        app:showAsAction="never" />
 </menu>
